[workspace]
members = ["core/mls-trait", "core/mls-types", "core/identity"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.4.0"

[workspace.metadata.cargo-machete]
ignored = ["serde_bytes"]

[profile.dev]
incremental = true
# improves compilation performances on macos
split-debuginfo = "unpacked"

# Locks should be optimized even in dev mode
[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
codegen-units = 1

[workspace.dependencies]
# Inner crates
identity = { path = "./core/identity" }
mls-trait = { path = "./core/mls-trait" }
mls-types = { path = "./core/mls-types" }

uniffi = "0.29.3"
anyhow = "1.0"
facet = "0.31"
serde = "1.0"
serde_bytes = "0.11"
serde_repr = "0.1"
serde_tuple = "1.1"
rand_chacha = "0.3"
thiserror = "2"
url = "2.5"
ahash = "0.8"
getrandom = { version = "0.3", features = ["wasm_js"] }
indexmap = { version = "2.12", features = ["serde"] }
itertools = "0.14"
bytes = { version = "1.11", features = ["serde"] }
time = { version = "0.3", default-features = false, features = [
    "serde",
    "std",
    "wasm-bindgen",
] }
base32 = "0.5"
base64 = "0.22"
tracing = "0.1"
postcard = "1.1"
ciborium = "0.2"
bincode = { version = "2.0", default-features = false }
custom_debug = "0.6"
# the crate may be named web-time,
# but it's actually also useful in non web contexts
web-time = "1.1.0"

# crypto
subtle = "2.6"
ed25519-dalek = "2.2"
p256 = "0.13"
p384 = "0.13"
sha2 = "0.10"
zeroize = { version = "1.8", features = ["serde", "derive"] }
actix-web = "4.12"
aes-gcm = { version = "0.10", default-features = false }
aead = { version = "0.5", features = ["bytes"] }
aes-kw = "0.2"
array-init = "2.1"
assert_let_bind = "0.1"
async-lock = "3.4"
async-trait = "0.1"
chrono = "0.4"
comrak = { version = "0.48.0", default-features = false }
color-eyre = "0.6"
console_error_panic_hook = "0.1"
crossbeam-channel = "0.5"
deadpool = "0.12"
emojis = "0.8"
eyre = "0.6"
figment = "0.10"
futures = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false }
hex = "0.4"
http = "1.3"
iri-string = "0.7"
iso8601 = "0.6"
lazy_static = "1.5"
matchit = "0.9"
maybe-async = "0.2"
rand = "0.8"
reqwest = { version = "0.12", default-features = false }
rustls = "0.23"
rustls-pemfile = "2.1"
seq-macro = "0.3"
serde_json = "1.0"
signature = "2.2"
temp-env = "0.3"
tokio = { version = "1.47", default-features = false }
tokio-tungstenite = { version = "0.28", default-features = false, features = [
    "native-tls",
    "connect",
] }
tracing-subscriber = "0.3"
tracing-web = "0.1"
uuid = "1.18"
ulid = "1.2"
# NOTE: If this version is changed then change the version in
# - `ci/Dockerfile`
# - `xtask/Cargo.toml`
wasm-bindgen = "=0.2.104"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
send_wrapper = { version = "0.6.0", features = ["futures"] }
faux = "0.1.13"
paste = "1.0"
assert_matches = "1.5"
strum = "0.27"
strum_macros = "0.27"
derive_more = { version = "2.0", features = ["full"] }
bat = "0.26"
clap = { version = "4.5", features = ["derive"] }
semver = "1.0"
whoami = "1.6"
divan = { version = "0.1", default-features = false }

# Archiving
zip = { version = "6.0", default-features = false, features = ["deflate"] }

# Media types
mime = "0.3"

percent-encoding = "2.3"
# Macros
darling = { version = "0.21", default-features = false }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", default-features = false }
regex = "1.12"

# --- Our own common dependencies ---
[workspace.dependencies.meet-identifiers]
git = "https://github.com/ProtonMeet/meet-common.git"
branch = "main"

[workspace.dependencies.meet-app-components]
git = "https://github.com/ProtonMeet/meet-common.git"
branch = "main"

[workspace.dependencies.meet-mls]
git = "https://github.com/ProtonMeet/meet-common.git"
branch = "main"

[workspace.dependencies.mls-utils]
git = "https://github.com/ProtonMeet/meet-common.git"
branch = "main"
features = ["pke"]

# --- SD-CWT ---
[workspace.dependencies.proton-claims]
git = "https://github.com/ProtonMeet/meet-common.git"
branch = "main"

# --- mls-rs (Wickr) ---
[workspace.dependencies.mls-rs]
git = "https://github.com/nexun-foundation/mls-rs.git"
default-features = false
features = [
    "private_message",
    "by_ref_proposal",
    "serde",
    "application_data",
    "fast_serialize",
    "out_of_order",
    "prior_epoch",
    "psk",
    "std",
    "tree_index",
    "custom_proposal",
]

[workspace.dependencies.mls-rs-core]
git = "https://github.com/nexun-foundation/mls-rs.git"

[workspace.dependencies.mls-rs-crypto-rustcrypto]
git = "https://github.com/nexun-foundation/mls-rs.git"

[workspace.dependencies.mls-rs-codec]
git = "https://github.com/nexun-foundation/mls-rs.git"

[workspace.dependencies.mls-spec]
git = "https://github.com/OtaK/mls-spec.git"
branch = "feat/draft-galore"
features = [
    "tlspl-utils",
    "draft-mahy-mls-ratchet-tree-options",
    "draft-mahy-mls-semiprivatemessage",
    "draft-mahy-mls-sd-cwt-credential",
    "draft-ietf-mls-extensions",
]

# proton-crypto
[workspace.dependencies.proton-crypto-account]
version = "0.12.2"
git = "git+ssh://git@gitlab.protontech.ch/rust/proton-crypto-rs.git"
tag = "proton-rpgp-v0.1.0-alpha.1"

[workspace.dependencies.proton-crypto]
version = "0.7.0"
git = "git+ssh://git@gitlab.protontech.ch/rust/proton-crypto-rs.git"
tag = "proton-rpgp-v0.1.0-alpha.1"

[workspace.metadata.bin]
cargo-xcode = { version = "=1.7.0" }

[patch.crates-io.ciborium]
git = "https://github.com/beltram/ciborium"
branch = "simple-value+cde"

[patch.crates-io.ciborium-io]
git = "https://github.com/beltram/ciborium"
branch = "simple-value+cde"

[patch.crates-io.ciborium-ll]
git = "https://github.com/beltram/ciborium"
branch = "simple-value+cde"

[workspace.lints.rust]
nonstandard_style = "warn"
future_incompatible = "warn"
unexpected_cfgs = "warn"

[workspace.lints.clippy]
# Enforced Groups
style = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Cherry Picks
## Nursery
option_if_let_else = "allow"           # map_or 🤢
missing_const_for_fn = "allow"
derive_partial_eq_without_eq = "allow"
significant_drop_tightening = "allow"  # Allowed to due false positives
new_without_default = "allow"
## restriction
rc_mutex = "warn"
unwrap_used = "warn"                    # @jeremylempereur is forbidden to touch this line
decimal_literal_representation = "warn"
# allow_attributes_without_reason = "warn"
dbg_macro = "warn"
print_stdout = "warn"
## Pedantic
needless_continue = "warn"
needless_for_each = "warn"
flat_map_option = "warn"
filter_map_next = "warn"
explicit_into_iter_loop = "warn"
manual_ok_or = "warn"
indexing_slicing = "warn"
unused_self = "warn"
from_iter_instead_of_collect = "warn"
implicit_clone = "warn"
inefficient_to_string = "warn"
large_types_passed_by_value = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
match_same_arms = "warn"
match_wild_err_arm = "warn"
mut_mut = "warn"
option_option = "warn"
ref_option_ref = "warn"
large_futures = "warn"
naive_bytecount = "warn"
# struct_excessive_bools = "warn" TODO: enable
# unreadable_literal = "warn"
unused_async = "warn"
assigning_clones = "warn"
bool_to_int_with_if = "warn"
cloned_instead_of_copied = "warn"
expl_impl_clone_on_copy = "warn"
explicit_iter_loop = "warn"
too_long_first_doc_paragraph = "allow"
