[package]
name = "identity"
version.workspace = true
edition.workspace = true

[features]
test-utils = ["ed25519-dalek/pem"]

[dependencies]
proton-claims = { workspace = true, features = ["ed25519", "p256", "p384"] }
ed25519-dalek = { workspace = true }
meet-identifiers.workspace = true
p256 = { workspace = true, features = ["ecdsa"] }
p384 = { workspace = true, features = ["ecdsa"] }
sha2.workspace = true
signature.workspace = true
base64.workspace = true
thiserror.workspace = true
serde.workspace = true
url.workspace = true
mls-spec.workspace = true

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["service-data"]
